--- a/Exercise2/Makefile
+++ b/Exercise2/Makefile
@@ -1,6 +1,7 @@
 output: part1.cpp part2.cpp
 	g++ part1.cpp -o part1 && ./part1
 	g++ part2.cpp -o part2 && ./part2
-
+	g++ part22.cpp -o part22 && ./part22
+	
 clean: rm*.output
 	
