--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -5,6 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -run: echo "Running makefile"
-      -name: create prog
-      -run: g++ hello.cpp
-      -run: ./a.out
+      -name: make
+       run: make helloworld
