--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,6 +4,6 @@ jobs:
   HelloWorld:
     runs-on: ubuntu-latest
     steps:
-      -run: echo "Running makefile"
-      -name: make
-       run: make helloworld
+        -run: echo "Running makefile"
+        -name: make
+        run: make hello
