--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,10 +1,12 @@
+---
 name: Hello World
 on: [push]
 jobs:
   HelloWorld:
-    runs-on:  ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       -run: echo "Running makefile"
       -name: create prog
         run: g++ hello.cpp
       -run: ./a.out
+      
