--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -5,6 +5,6 @@ jobs:
   HelloWorld:
     runs-on: ubuntu-latest
     steps:
-      -run: echo "Running makefile"
-      -run: g++ hello.cpp
-      -run: ./a.out
+      run: echo "Running makefile"
+      run: g++ hello.cpp
+      run: ./a.out
